[package]
name = "ys"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
once_cell = "1.8"
toml = "0.8"
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies"] }
scraper = "0.19"